# numberings

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  config.hpp.in
.conan/profiles/: debug  default-profile  release
.github/workflows/: build-test.yaml  conan.yaml  pack.yaml
include/: buffer.hpp  numberings.hpp  type_sort.hpp
include/detail/: size_of.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  buffer.cpp  simple.cpp  trivial.cpp  type_sort.cpp
